# t6-singlethread

./: Entrega.md
mandelbrot_mpi/: CMakeLists.txt  Fractal.cpp  Fractal.h  MandelbrotGenerator.h  MandelbrotManager.h  MandelbrotWorker.h  PacketTag.h  main.cpp
