cmake_minimum_required(VERSION 3.19)
project(mandelbrot)

find_package(MPI REQUIRED)
include_directories(${MPI_INCLUDE_PATH})
message(${MPI_INCLUDE_PATH})
message(${MPI_C_LIBRARIES})
add_executable(mandelbrot Fractal.cpp Fractal.h main.cpp MandelbrotGenerator.h)
target_link_libraries(mandelbrot ${MPI_C_LIBRARIES})
if(MPI_COMPILE_FLAGS)
    set_target_properties(mandelbrot PROPERTIES COMPILE_FLAGS "${MPI_COMPILE_FLAGS}")
endif()

if(MPI_LINK_FLAGS)
    set_target_properties(mandelbrot PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
endif()
